--- a/index.html
+++ b/index.html
@@ -275,6 +275,7 @@
                 <label for="checklist-selector" class="block text-sm font-medium text-gray-300 mb-2">Select a Process Checklist:</label>
                 <select id="checklist-selector" class="block w-full rounded-lg border-2 border-gray-600 bg-gray-800 text-white p-3 focus:outline-none focus:ring-2 focus:ring-blue-500 transition-shadow">
                     <option value="subscription-cancellation">Subscription Cancellation</option>
+                     <option value="membership-pause">Membership Pause</option>
                     <option value="returns">Returns</option>
                     <option value="order-cancellations">Order Cancellations</option>
                     <option value="downgrades">Downgrades</option>
@@ -857,3 +858,4 @@
     </script>
 </body>
 </html>
+
