--- a/index.html
+++ b/index.html
@@ -329,6 +329,7 @@
             <form id="suggestion-form" class="flex flex-col space-y-4">
                 <select id="suggestion-process" class="block w-full rounded-lg border-2 border-gray-600 bg-gray-800 text-white p-3 focus:outline-none focus:ring-2 focus:ring-blue-500 transition-shadow">
                     <option value="subscription-cancellation">Subscription Cancellation</option>
+                    <option value="membership-pause">Membership Pause</option>
                     <option value="returns">Returns</option>
                     <option value="order-cancellations">Order Cancellations</option>
                     <option value="downgrades">Downgrades</option>
@@ -858,4 +859,5 @@
     </script>
 </body>
 </html>
+
 
